user login done

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="form__group">
-        <label for="type" class="form__label">Select user</label>
+        <label for="type" class="form__label">Select role</label>
         <select id="type" name="type">
           <option label="consumer" value="consumer">consumer</option>
           <option label="admin" value="admin">admin</option>
